Buttons: fix iconic subview buttons alignment fixes #291

--- a/theme/parts/buttons.css
+++ b/theme/parts/buttons.css
@@ -58,6 +58,9 @@ button.close,
 	outline: 0 !important;
 	font: menu !important;
 }
+.subviewbutton-iconic {
+	-moz-box-pack: center !important;
+}
 
 /* Buttons with margins */
 #nav-bar toolbarbutton:not(#urlbar-zoom-button):not(.subviewbutton),
